# geocodio-library-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  smoke.py  smoke_lists.py  test_pypi_release.py
.github/workflows/: ci.yml  publish.yml
examples/: list_api_example.py
project-docs/: Geocodio Internal Project Plan.md  Geocodio_Python_Library_Project_Plan.md  List_API_Endpoint_Test_Mapping.md  List_API_Implementation_Plan.md  List_API_Implementation_Summary.md  project_calendar.json  visual_timeline.md
src/geocodio/: __init__.py  _version.py  client.py  distance.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_errors.py  test_geocode.py  test_geocoding.py  test_models.py  test_reverse.py
tests/e2e/: test_api.py  test_distance.py  test_lists_api.py
tests/unit/: test_client.py  test_distance.py  test_errors.py  test_geocode.py  test_reverse.py
