[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geocodio-python"
version = "0.1.0"
description = "A Python client for the Geocodio API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/geocodio-python"
Documentation = "https://geocodio-python.readthedocs.io"
Repository = "https://github.com/yourusername/geocodio-python"
Issues = "https://github.com/yourusername/geocodio-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geocodio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=geocodio --cov-report=term-missing"